2008-09-17  David Bateman  <dbateman@free.fr>

	* data.cc (do_cat): Chopping trailing singleton dimensions.

	* data.cc (SINGLE_TYPE_CONCAT, DO_SINGLE_TYPE_CONCAT): New macros
	(do_cat): Special case single type concatenations for speed.
	* pt.mat.cc (std::string get_concat_class (const std::string&,
	const std::string&), void maybe_warn_string_concat (bool, bool)):
	Remove static declaration.
	* pt-mat.h (std::string get_concat_class (const std::string&,
	const std::string&), void maybe_warn_string_concat (bool, bool)):
	Define extern here.
	
	* DLD-FUNCTIONS/sparse.cc (Fsparse): Clarify the help string.

2008-09-10  John W. Eaton  <jwe@octave.org>

	* octave.cc (octave_main): Make all command-line arguments
	available to startup scripts and PKG_ADD files.

2008-09-09  David Bateman  <dbateman@free.fr>

	* DLD-FUNCTIONS/regexp.cc (octregexp_list): Distinguish between
	matlab named tokens and perl lookbehind expressions. For
	lookbehind expression replace "*" and "+" with a limited number of
	fixed length expressions to simulate arbitrary length look behind.

2008-09-08  Michael Goffioul  <michael.goffioul@gmail.com>

	* DLD-FUNCTIONS/__magick_read__.cc (encode_uint_image): Resolve "pow"
	ambiguity.

	* graphics.cc (base_properties::get_dynamic,
	base_properties::set_dynamic, base_propertyes::get_property_dynamic):
	Add the 3rd template parameter to std::map, corresponding to all_props
	field.

2008-09-08  John W. Eaton  <jwe@octave.org>

	* ls-oct-ascii.cc (std::string extract_keyword (std::istream&,
	const char *, const bool)): Also accept \r as line ending character.
	* ls-oct-ascii.h (template <class T> bool extract_keyword
	(std::istream&, const char *, T&, const bool)): Likewise.
	(template <class T> bool extract_keyword (std::istream&, const
	string_vector&, std::string&, T&, const bool)): Likewise.

2008-09-03  Ben Abbott <bpabott@mac.com>

	* mappers.cc: Use eps(single) as tolerance for single precesion test.

2008-09-03  John W. Eaton  <jwe@octave.org>
