@@ -135,6 +135,7 @@ Al Niessner
 Rick Niles
 Takuji Nishimura
 Eric Norum
+Krzesimir Nowak
 Michael O'Brien
 Thorsten Ohl
 Arno Onken
